Fixed build to work on run dev; Updated to BabylonJS 3.1.1; Added Babelify for modern ES syntax;

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
   <canvas id="canvas"></canvas>
 
-  <script type="text/javascript" src="lib/babylon.js"></script>
-  <script type="text/javascript" src="lib/oimo.min.js"></script>
+  <script type="text/javascript" src="lib/cannon.min.js"></script>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
